unpackaged/main/default/objects/PagesApi__Component__c/PagesApi__Component__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>List of dynamic components that can be used to create new page elements.</description>
    <label>Component</label>
</CustomObject>