unpackaged/main/default/objects/PagesApi__Component__c/fields/PagesApi__Apex_Class__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Apex_Class__c</fullName>
    <description>The name of the Apex Class that implements the dynamic component interface.</description>
    <inlineHelpText>The name of the Apex Class that implements the dynamic component interface.</inlineHelpText>
    <label>Apex Class</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>