unpackaged/main/default/objects/PagesApi__Component__c/fields/PagesApi__Description__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Description__c</fullName>
    <description>Short description for the Dynamic Component.</description>
    <inlineHelpText>Short description for the Dynamic Component.</inlineHelpText>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>