unpackaged/main/default/objects/PagesApi__Component__c/fields/PagesApi__Do_Not_Display_In_Page_Builder_UI__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Do_Not_Display_In_Page_Builder_UI__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the Component will not be made available for selection in the page builder ui.</description>
    <inlineHelpText>When checked, the Component will not be made available for selection in the page builder ui.</inlineHelpText>
    <label>Do Not Display In Page Builder UI</label>
    <type>Checkbox</type>
</CustomField>