unpackaged/main/default/objects/PagesApi__Component__c/fields/PagesApi__Has_Body__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Has_Body__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, users can define custom html that will be inserted into the apex:componentBody. Default false.</description>
    <inlineHelpText>If true, users can define custom html that will be inserted into the apex:componentBody. Default false.</inlineHelpText>
    <label>Has Body</label>
    <type>Checkbox</type>
</CustomField>