unpackaged/main/default/objects/PagesApi__Component__c/fields/PagesApi__Icon_Path__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Icon_Path__c</fullName>
    <defaultValue>&quot;https://dl.dropboxusercontent.com/u/74862951/no_image.jpg&quot;</defaultValue>
    <description>The path to the component Icon that can be used in various pages</description>
    <inlineHelpText>Provide the Icon path that can be utilized in the various pages</inlineHelpText>
    <label>Icon Path</label>
    <type>Url</type>
</CustomField>