unpackaged/main/default/objects/PagesApi__Component__c/fields/PagesApi__Image_Path__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Image_Path__c</fullName>
    <description>Link to an image file showing an example implementation of the dynamic component.</description>
    <inlineHelpText>Link to an image file showing an example implementation of the dynamic component.</inlineHelpText>
    <label>Image Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>