unpackaged/main/default/objects/PagesApi__Component__c/fields/PagesApi__Preview_Width__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Preview_Width__c</fullName>
    <defaultValue>12</defaultValue>
    <label>Preview Width</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>